Bug 481952 - On X11, panels are hidden after minimizing Dolphin window
Summary: On X11, panels are hidden after minimizing Dolphin window
Status: RESOLVED FIXED
Alias: None
Product: dolphin
Classification: Applications
Component: general (other bugs)
Version First Reported In: 24.02.0
Platform: Neon Linux
: VHI major
Target Milestone: ---
Assignee: Dolphin Bug Assignee
URL:
Keywords: qt6
: 479645 481956 481970 482004 482044 482106 482160 482579 482652 482919 483389 483647 483771 484065 (view as bug list)
Depends on:
Blocks:
 
Reported: 2024-02-28 19:24 UTC by paninomaninodesu
Modified: 2024-03-21 19:01 UTC (History)
34 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 24.02.1
Sentry Crash Report:


Attachments
short video showing the bug (2.04 MB, video/mp4)
2024-02-28 19:24 UTC, paninomaninodesu
Details

Note You need to log in before you can comment on or make changes to this bug.
Description paninomaninodesu 2024-02-28 19:24:37 UTC
Created attachment 166169 [details]
short video showing the bug

SUMMARY
***
NOTE: If you are reporting a crash, please try to attach a backtrace with debug symbols.
See https://community.kde.org/Guidelines_and_HOWTOs/Debugging/How_to_create_useful_crash_reports
***


STEPS TO REPRODUCE
1. Open Dolphin with locals panel enabled
2. Minimize window
3. 

OBSERVED RESULT
If the "locals" (F9) are enabled on the interface it'll show up when you open Dolphin. But if you minimize the windows it is disabled. No matter if you enable it again, it'll be disabled if you minimize the window but NOT if you close Dolphin.

EXPECTED RESULT
No changed to the interface without user input.

SOFTWARE/OS VERSIONS
Windows: 
macOS: 
Linux/KDE Plasma: Neon
(available in About System)
KDE Plasma Version: 6.0.0
KDE Frameworks Version: 6.0.0
Qt Version: 6.6.2

ADDITIONAL INFORMATION
Comment 1 Nicolas Fella 2024-02-28 20:48:38 UTC
*** Bug 481956 has been marked as a duplicate of this bug. ***
Comment 2 paninomaninodesu 2024-02-28 22:06:35 UTC
Submitted on X11.
Tested on Wayland and on Wayland it doesn't happen.
Comment 3 Nicolas Fella 2024-02-28 22:40:19 UTC
*** Bug 481970 has been marked as a duplicate of this bug. ***
Comment 4 Doug 2024-02-29 02:49:44 UTC
I can't reproduce this, but since there are two other reports of the exact same thing, I'm going to mark it confirmed.

Operating System: KDE neon Testing Edition
KDE Plasma Version: 6.0.0
KDE Frameworks Version: 6.0.0
Qt Version: 6.6.2
Kernel Version: 6.5.0-21-generic (64-bit)
Graphics Platform: Wayland
Graphics Processor: AMD Radeon Pro WX 3200 Series
Comment 5 Nicolas Fella 2024-02-29 11:38:03 UTC
*** Bug 482004 has been marked as a duplicate of this bug. ***
Comment 6 Méven Car 2024-02-29 16:14:09 UTC
*** Bug 482044 has been marked as a duplicate of this bug. ***
Comment 7 Antonio Rojas 2024-03-01 08:53:51 UTC
*** Bug 482106 has been marked as a duplicate of this bug. ***
Comment 8 Dima 2024-03-01 17:10:44 UTC
I can also reproduce this bug. Dolphin version 24.02.0

Operating System: KDE neon 6.0
KDE Plasma Version: 6.0.0
KDE Frameworks Version: 6.0.0
Qt Version: 6.6.2
Kernel Version: 6.5.0-21-generic (64-bit)
Graphics Platform: X11
Graphics Processor: NVIDIA GeForce GTX 1050 Ti/PCIe/SSE2
Comment 9 Nicolas Fella 2024-03-01 17:41:46 UTC
*** Bug 482160 has been marked as a duplicate of this bug. ***
Comment 10 Niko N. 2024-03-02 17:04:22 UTC
I'm also experiencing this issue with Dolphin 24.02.0 and can reproduce it every time.

Operating System: KDE neon 6.0
KDE Plasma Version: 6.0.0
KDE Frameworks Version: 6.0.0
Qt Version: 6.6.2
Kernel Version: 6.5.0-21-generic (64-bit)
Graphics Platform: X11
Processors: 8 × Intel® Core™ i7-6700K CPU @ 4.00GHz
Graphics Processor: NVIDIA GeForce RTX 3060/PCIe/SSE2
Comment 11 martonmiklos 2024-03-04 23:04:03 UTC
It also always reproducible here: 
Operating System: KDE neon 6.0
KDE Plasma Version: 6.0.0
KDE Frameworks Version: 6.0.0
Qt Version: 6.6.2
Kernel Version: 6.2.0-39-generic (64-bit)
Graphics Platform: X11
Graphics Processor: NVIDIA RTX A2000 Laptop GPU/PCIe/SSE2
Comment 12 Nate Graham 2024-03-06 15:23:49 UTC
*** Bug 479645 has been marked as a duplicate of this bug. ***
Comment 13 Nelson 2024-03-06 19:27:47 UTC
I confirm to having the same issue. Under KDE Neon 6.0.0, X11, NVIDIA card (if it helps).
This bug was driving me crazy by how random it seemed, as I didn't realize it was caused by minimizing Dolphin.
Now I can reproduce it every time.
Comment 14 Ilab Sentuser 2024-03-07 01:32:43 UTC
*** Bug 482579 has been marked as a duplicate of this bug. ***
Comment 15 pmargeti34 2024-03-07 06:30:25 UTC
8 duplicate reports iso far ndicate this is a high visibility bug. Please consider adding it to the 15 minute bug list :)
Comment 16 Antonio Rojas 2024-03-07 08:29:27 UTC
*** Bug 482652 has been marked as a duplicate of this bug. ***
Comment 17 kde-yyds 2024-03-07 08:37:42 UTC
The same. In the past i didn't know when does this happen, now i can reproduce it every time. Please fix it soon. Thanks🐔
Comment 18 Gilberto Ferreira 2024-03-07 13:12:56 UTC
Well... It's seems this issue is affect a lot of people.
I am glad that I am not alone on this.
Please, fix this issue.
Thanks a lot.
Comment 19 keZam 2024-03-07 21:15:59 UTC
Also facing this issue on X11, does not happen in wayland.
Comment 20 Hammad R 2024-03-07 23:01:02 UTC
I'm also seeing this on Arch Linux having upgraded to Plasma 6 yesterday (X11). Reproducible consistently while minimising Dolphin. affecting at least the Places and Information panels.
Comment 23 Nicolas Fella 2024-03-08 16:39:41 UTC
This seems to be caused by https://bugreports.qt.io/browse/QTBUG-48161
Comment 24 Gilberto Ferreira 2024-03-08 16:43:38 UTC Comment hidden (spam)
Comment 25 Bug Janitor Service 2024-03-08 17:50:55 UTC
A possibly relevant merge request was started @ https://invent.kde.org/system/dolphin/-/merge_requests/728
Comment 26 Méven Car 2024-03-08 18:31:27 UTC
Git commit 95551f44922670be5c4d670833c2d4e398657495 by Méven Car, on behalf of Nicolas Fella.
Committed on 08/03/2024 at 18:29.
Pushed by meven into branch 'master'.

Remove unneeded code for toggeling dockwidget visibility

QDockWidget::toggleViewAction::toggled is emitted when minimizing
the application window on X11 (https://bugreports.qt.io/browse/QTBUG-48161
potentially related). This will cause the dockwidget to be hidden when
minimizing the window.

We don't actually seem to need that connection, triggering the action
(via shortcut or menu) seems to correctly show/hide the dockwidget
without it

M  +0    -2    src/dolphinmainwindow.cpp

https://invent.kde.org/system/dolphin/-/commit/95551f44922670be5c4d670833c2d4e398657495
Comment 27 Méven 2024-03-08 18:33:13 UTC
Git commit 4dc9510a2a8ceb35503cc7e81c2024774491ce8a by Méven Car, on behalf of Nicolas Fella.
Committed on 08/03/2024 at 18:32.
Pushed by meven into branch 'release/24.02'.

Remove unneeded code for toggeling dockwidget visibility

QDockWidget::toggleViewAction::toggled is emitted when minimizing
the application window on X11 (https://bugreports.qt.io/browse/QTBUG-48161
potentially related). This will cause the dockwidget to be hidden when
minimizing the window.

We don't actually seem to need that connection, triggering the action
(via shortcut or menu) seems to correctly show/hide the dockwidget
without it
(cherry picked from commit 95551f44922670be5c4d670833c2d4e398657495)

M  +0    -2    src/dolphinmainwindow.cpp

https://invent.kde.org/system/dolphin/-/commit/4dc9510a2a8ceb35503cc7e81c2024774491ce8a
Comment 28 Steven 2024-03-08 21:46:37 UTC
Can confirm that I have this bug too. Running X11 as well.
Comment 29 Nicolas Fella 2024-03-08 21:50:23 UTC
Please don't reopen bugreports if you are not actually running the version it is fixed in.

See https://community.kde.org/Get_Involved/Issue_Reporting#Understand_what_the_resolution_statuses_mean
Comment 30 Steven 2024-03-08 21:51:57 UTC
(In reply to Nicolas Fella from comment #29)
> Please don't reopen bugreports if you are not actually running the version
> it is fixed in.
> 
> See
> https://community.kde.org/Get_Involved/
> Issue_Reporting#Understand_what_the_resolution_statuses_mean

Sorry, I'm new to this site and don't know how everything works. Thanks for the useful info!
Comment 31 Antonio Rojas 2024-03-08 22:37:39 UTC
*** Bug 482919 has been marked as a duplicate of this bug. ***
Comment 32 Gilberto Ferreira 2024-03-09 01:38:07 UTC
Just made the update tonight and everything is fine.
Thanks
Comment 33 Duns 2024-03-10 10:58:53 UTC
I did the update but the problem is still here:

Operating System: KDE neon 6.0
KDE Plasma Version: 6.0.0
KDE Frameworks Version: 6.0.0
Qt Version: 6.6.2
Kernel Version: 6.5.0-25-generic (64-bit)
Graphics Platform: X11
Processors: 16 × AMD Ryzen 7 5700G with Radeon Graphics
Memory: 13,5 GiB of RAM
Graphics Processor: AMD Radeon Graphics

Dolphin 24.02.0

What should I do to solve?
Comment 34 Niko N. 2024-03-10 11:00:40 UTC
(In reply to Duns from comment #33)
> I did the update but the problem is still here:
> 
> Operating System: KDE neon 6.0
> KDE Plasma Version: 6.0.0
> KDE Frameworks Version: 6.0.0
> Qt Version: 6.6.2
> Kernel Version: 6.5.0-25-generic (64-bit)
> Graphics Platform: X11
> Processors: 16 × AMD Ryzen 7 5700G with Radeon Graphics
> Memory: 13,5 GiB of RAM
> Graphics Processor: AMD Radeon Graphics
> 
> Dolphin 24.02.0
> 
> What should I do to solve?

It's fixed in 24.02.1. You are still using 24.02.0.
Comment 35 Duns 2024-03-10 11:45:17 UTC
I see. But I do all the updates of KDE Neon. 
Can I force an update of Dolphin?
Comment 36 boospy 2024-03-10 13:26:31 UTC
(In reply to Duns from comment #35)
> I see. But I do all the updates of KDE Neon. 
> Can I force an update of Dolphin?

I don't think the packages are built for NEON yet. At least I didn't see them in the GIT pipeline.
Comment 37 Gilberto Ferreira 2024-03-10 14:05:06 UTC
(In reply to boospy from comment #36)
> (In reply to Duns from comment #35)
> > I see. But I do all the updates of KDE Neon. 
> > Can I force an update of Dolphin?
> 
> I don't think the packages are built for NEON yet. At least I didn't see
> them in the GIT pipeline.

Works fine with Neon Testing.
I have had installed Neon User and noticed that Dolphin doesnt work properly with X11.
After update to Neon testing, everything is fine now.
Comment 38 Nicolas Fella 2024-03-12 22:34:41 UTC
*** Bug 483389 has been marked as a duplicate of this bug. ***
Comment 39 Bernhard Rosenkränzer 2024-03-13 01:03:03 UTC
Fix cherry-picked into OpenMandriva packages
Comment 40 Nicolas Fella 2024-03-15 15:30:04 UTC
*** Bug 483647 has been marked as a duplicate of this bug. ***
Comment 41 Antonio Rojas 2024-03-16 16:21:11 UTC
*** Bug 483771 has been marked as a duplicate of this bug. ***
Comment 42 Cezar Tigaret 2024-03-18 12:43:38 UTC
I can also confirm this is happening with plasma 6 running in X11:
Operating System: openSUSE Tumbleweed 20240315
KDE Plasma Version: 6.0.2
KDE Frameworks Version: 6.0.0
Qt Version: 6.6.2
Kernel Version: 6.7.9-1-default (64-bit)
Graphics Platform: X11
Processors: 16 × AMD Ryzen 7 4800H with Radeon Graphics
Memory: 30.8 GiB of RAM
Graphics Processor: AMD Radeon Graphics
Manufacturer: SLIMBOOK
Product Name: PROX15-AMD
Comment 43 smow 2024-03-18 18:56:28 UTC
(In reply to Cezar Tigaret from comment #42)
> I can also confirm this is happening with plasma 6 running in X11:
> Operating System: openSUSE Tumbleweed 20240315
> KDE Plasma Version: 6.0.2
> KDE Frameworks Version: 6.0.0
> Qt Version: 6.6.2
> Kernel Version: 6.7.9-1-default (64-bit)
> Graphics Platform: X11
> Processors: 16 × AMD Ryzen 7 4800H with Radeon Graphics
> Memory: 30.8 GiB of RAM
> Graphics Processor: AMD Radeon Graphics
> Manufacturer: SLIMBOOK
> Product Name: PROX15-AMD

It's already fixed in Dolphin 24.02.1.
Comment 44 xenothestrange 2024-03-18 19:17:55 UTC
I am on kde neon and apt reports it's at the latest version which is 0.00.1 behind (24.02.0).
How do up update to 24.02.1 so I have this fix?
Comment 45 Nate Graham 2024-03-18 19:38:11 UTC
You wait until 24.02.1 is released. :) Should be about a week.

Other distros have already backported the fix, but Neon doesn't do that kind of thing.
Comment 46 xenothestrange 2024-03-18 19:47:11 UTC
(In reply to Nate Graham from comment #45)
> You wait until 24.02.1 is released. :) Should be about a week.
> 
> Other distros have already backported the fix, but Neon doesn't do that kind
> of thing.

💀💀💀💀💀💀💀💀💀💀💀💀 Aaaaaaaa 
ok. Thx for the info. Damn slow neon.
Comment 47 Antonio Rojas 2024-03-20 12:54:17 UTC
*** Bug 484065 has been marked as a duplicate of this bug. ***
Comment 48 boospy 2024-03-21 19:01:32 UTC
Works perfectly again, also on "KDE Neon", very thanks!!