Remove unneeded code for toggeling dockwidget visibility

QDockWidget::toggleViewAction::toggled is emitted when minimizing
the application window on X11 (https://bugreports.qt.io/browse/QTBUG-48161
potentially related). This will cause the dockwidget to be hidden when
minimizing the window.

We don't actually seem to need that connection, triggering the action
(via shortcut or menu) seems to correctly show/hide the dockwidget
without it

BUG: 481952
(cherry picked from commit 95551f44922670be5c4d670833c2d4e398657495)